[package]
name = "memoize"
version = "0.1.0"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.5"
proc-macro2 = "1.0.12"
syn = {version = "1.0.40", features=["full", "derive"]}
darling = "0.10.2"
lazy_static = "1.4.0"

[lib]
proc-macro = true