[package]
name = "memoize"
version = "0.1.0"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.5"
proc-macro2 = "1.0.12"
syn = {version = "1.0.40", features=["full", "derive"]}
darling = "0.10.2"
lazy_static = "1.4.0"
rand = "0.7.3"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0.58"
timed = "0.1.5"

[lib]
proc-macro = true